 syntax = "proto3";

option csharp_namespace = "Common.Grpc";
import "google/protobuf/timestamp.proto";

service GrpcAuthService {
  rpc ValidateToken(GrpcValidateTokenRequest) returns (GrpcValidateTokenResponse);
  rpc CheckPermission(GrpcCheckRequest) returns (GrpcCheckResponse);
  rpc CheckRole(GrpcCheckRequest) returns (GrpcCheckResponse);
  rpc CheckScope(GrpcCheckRequest) returns (GrpcCheckResponse);
  rpc CheckPolicy(GrpcCheckRequest) returns (GrpcCheckResponse);
}

message GrpcValidateTokenRequest {
  string token = 1;
}

message GrpcValidateTokenResponse {
  bool isValid = 1;
  string userId = 2;
}

message GrpcCheckRequest {
  string token = 1;
  repeated string value = 2;
}

message GrpcCheckResponse {
  bool granted = 1;
}